--- a/config/default/core.entity_view_display.node.heritage_item.full.yml
+++ b/config/default/core.entity_view_display.node.heritage_item.full.yml
@@ -20,6 +20,7 @@ dependencies:
     - field.field.node.heritage_item.field_date_made
     - field.field.node.heritage_item.field_date_seasonal_time
     - field.field.node.heritage_item.field_description_condition
+    - field.field.node.heritage_item.field_description_howtocite
     - field.field.node.heritage_item.field_description_materials
     - field.field.node.heritage_item.field_description_motifs
     - field.field.node.heritage_item.field_description_othernotes
@@ -55,18 +56,18 @@ dependencies:
     - field.field.node.heritage_item.field_record_creation_notes
     - field.field.node.heritage_item.field_region_of_origin
     - field.field.node.heritage_item.field_region_origin_attribution
+    - field.field.node.heritage_item.field_related_extern_lang_items
     - field.field.node.heritage_item.field_related_heritage_item
+    - field.field.node.heritage_item.field_related_heritage_out_gks
     - field.field.node.heritage_item.field_related_language_item
     - field.field.node.heritage_item.field_source_coll_his
     - field.field.node.heritage_item.field_sources_exhib_pub_his
-    - field.field.node.heritage_item.field_subsequent_functions
     - field.field.node.heritage_item.field_tk_label
     - node.type.heritage_item
     - responsive_image.styles.d02
   module:
     - advanced_text_formatter
     - ds
-    - geofield_map
     - layout_builder
     - link
     - physical
@@ -128,8 +129,8 @@ third_party_settings:
         - field_folders
         - field_function_attribution
         - field_identifier_url
-        - field_local_origin_attribution
         - field_local_origin_tid
+        - field_local_origin_attribution
         - field_maker_name
         - field_maker_role
         - field_nation_tid
@@ -143,14 +144,15 @@ third_party_settings:
         - field_record_creation_notes
         - field_region_origin_attribution
         - field_related_heritage_item
+        - field_related_heritage_out_gks
         - field_related_language_item
+        - field_related_extern_lang_items
         - field_sources_exhib_pub_his
         - field_source_coll_his
-        - field_subsequent_functions
+        - field_description_howtocite
         - field_image2
         - field_media_audio_video_docs_
         - field_region_of_origin
-        - field_geofield
     fields:
       node_title:
         plugin_id: node_title
@@ -847,6 +849,65 @@ content:
             suffix: ''
     weight: 21
     region: main
+  field_description_howtocite:
+    type: advanced_text
+    label: above
+    settings:
+      trim_length: '0'
+      filter: input
+      format: plain_text
+      allowed_html:
+        - a
+        - b
+        - br
+        - dd
+        - dl
+        - dt
+        - em
+        - i
+        - li
+        - ol
+        - p
+        - strong
+        - u
+        - ul
+      ellipsis: 0
+      word_boundary: 0
+      use_summary: 0
+      token_replace: 0
+      link_to_entity: 0
+      autop: 0
+    third_party_settings:
+      ds:
+        ft:
+          id: expert
+          settings:
+            lb: ''
+            lbw: true
+            lbw-el: strong
+            lbw-cl: ''
+            lbw-at: ''
+            lb-col: false
+            ow: true
+            ow-el: ''
+            ow-cl: ''
+            ow-at: ''
+            ow-def-at: true
+            ow-def-cl: true
+            fis: false
+            fis-el: ''
+            fis-cl: ''
+            fis-at: ''
+            fis-def-at: false
+            fi: false
+            fi-el: ''
+            fi-cl: ''
+            fi-at: ''
+            fi-def-at: false
+            prefix: ''
+            suffix: ''
+    weight: 51
+    region: main
   field_description_materials:
     type: advanced_text
     label: above
@@ -1402,111 +1463,6 @@ content:
             suffix: ''
     weight: 29
     region: main
-  field_geofield:
-    type: geofield_google_map
-    label: visually_hidden
-    settings:
-      map_dimensions:
-        width: 100%
-        height: 450px
-      map_empty:
-        empty_behaviour: '0'
-        empty_message: 'No Geofield Value entered for this field'
-      map_center:
-        lat: !!float 43
-        lon: !!float -80
-        center_force: true
-      map_zoom_and_pan:
-        zoom:
-          initial: 6
-          force: false
-          min: 1
-          max: 22
-          finer: 0
-        gestureHandling: auto
-        scrollwheel: false
-        draggable: false
-        map_reset_position: TOP_RIGHT
-        map_reset: true
-      map_controls:
-        zoom_control: true
-        map_type_id: terrain
-        map_type_control: false
-        map_type_control_options_type_ids:
-          roadmap: roadmap
-          satellite: '0'
-          hybrid: hybrid
-          terrain: terrain
-        scale_control: true
-        street_view_control: false
-        fullscreen_control: false
-        disable_default_ui: false
-      map_marker_and_infowindow:
-        icon_image_mode: icon_file
-        icon_file_wrapper:
-          icon_file:
-            fids: ''
-            upload: ''
-            is_svg: false
-          image_style: geofield_map_default_icon_style
-        icon_image_path: ''
-        infowindow_field: title
-        view_mode: full
-        tooltip_field: title
-        multivalue_split: false
-        force_open: false
-      map_oms:
-        map_oms_control: true
-        map_oms_options: '{"markersWontMove":"true","markersWontHide":"true","basicFormatEvents":"true","nearbyDistance":3}'
-      map_additional_options: ''
-      map_geometries_options: '{"strokeColor":"black","strokeOpacity":"0.8","strokeWeight":2,"fillColor":"blue","fillOpacity":"0.1","clickable":false}'
-      custom_style_map:
-        custom_style_name: ''
-        custom_style_options: ''
-        custom_style_control: false
-        custom_style_default: false
-      map_markercluster:
-        markercluster_additional_options: '{"maxZoom":12,"gridSize":50}'
-        markercluster_control: true
-      map_geocoder:
-        control: 0
-        settings:
-          providers:
-            bingmaps:
-              weight: 0
-              checked: false
-            geoplugin:
-              weight: 0
-              checked: false
-            googlemaps:
-              weight: 0
-              checked: false
-          min_terms: 4
-          delay: 800
-          options: ''
-          zoom: 16
-          infowindow: false
-          position: TOP_LEFT
-          input_size: 25
-      map_additional_libraries:
-        places: true
-        drawing: false
-        geometry: true
-        visualization: false
-      map_lazy_load:
-        lazy_load: false
-      gmap_api_key: ''
-      weight: ''
-    third_party_settings:
-      ds:
-        ft:
-          id: default
-          settings:
-            lb: ''
-            lb-col: false
-            classes: {  }
-    weight: 53
-    region: main
   field_identifier_url:
     type: link
     label: inline
@@ -1583,7 +1539,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 50
+    weight: 52
     region: main
   field_item_type:
     type: entity_reference_label
@@ -1678,7 +1634,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 31
+    weight: 32
     region: main
   field_local_origin_tid:
     type: entity_reference_label
@@ -1714,7 +1670,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 32
+    weight: 31
     region: main
   field_maker_attribution:
     type: advanced_text
@@ -1883,7 +1839,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 51
+    weight: 53
     region: main
   field_nation_rationale:
     type: smart_trim
@@ -2300,7 +2256,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 52
+    weight: 54
     region: main
   field_region_origin_attribution:
     type: advanced_text
@@ -2361,6 +2317,47 @@ content:
             suffix: ''
     weight: 44
     region: main
+  field_related_extern_lang_items:
+    type: link
+    label: above
+    settings:
+      trim_length: 80
+      url_only: false
+      url_plain: false
+      rel: nofollow
+      target: _blank
+    third_party_settings:
+      ds:
+        ds_limit: ''
+        ft:
+          id: expert
+          settings:
+            lb: ''
+            lbw: true
+            lbw-el: strong
+            lbw-cl: ''
+            lbw-at: ''
+            lb-col: true
+            ow: true
+            ow-el: ''
+            ow-cl: ''
+            ow-at: ''
+            ow-def-at: true
+            ow-def-cl: true
+            fis: false
+            fis-el: ''
+            fis-cl: ''
+            fis-at: ''
+            fis-def-at: false
+            fi: false
+            fi-el: ''
+            fi-cl: ''
+            fi-at: ''
+            fi-def-at: false
+            prefix: ''
+            suffix: ''
+    weight: 48
+    region: main
   field_related_heritage_item:
     type: entity_reference_label
     label: above
@@ -2398,6 +2395,47 @@ content:
             suffix: ''
     weight: 45
     region: main
+  field_related_heritage_out_gks:
+    type: link
+    label: above
+    settings:
+      trim_length: 80
+      url_only: false
+      url_plain: false
+      rel: nofollow
+      target: _blank
+    third_party_settings:
+      ds:
+        ds_limit: ''
+        ft:
+          id: expert
+          settings:
+            lb: ''
+            lbw: true
+            lbw-el: strong
+            lbw-cl: ''
+            lbw-at: ''
+            lb-col: true
+            ow: true
+            ow-el: ''
+            ow-cl: ''
+            ow-at: ''
+            ow-def-at: true
+            ow-def-cl: true
+            fis: false
+            fis-el: ''
+            fis-cl: ''
+            fis-at: ''
+            fis-def-at: false
+            fi: false
+            fi-el: ''
+            fi-cl: ''
+            fi-at: ''
+            fi-def-at: false
+            prefix: ''
+            suffix: ''
+    weight: 46
+    region: main
   field_related_language_item:
     type: entity_reference_label
     label: above
@@ -2433,7 +2471,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 46
+    weight: 47
     region: main
   field_source_coll_his:
     type: advanced_text
@@ -2492,68 +2530,9 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 48
+    weight: 50
     region: main
   field_sources_exhib_pub_his:
-    type: advanced_text
-    label: above
-    settings:
-      trim_length: '0'
-      ellipsis: '1'
-      word_boundary: '1'
-      filter: input
-      format: plain_text
-      allowed_html:
-        - a
-        - b
-        - br
-        - dd
-        - dl
-        - dt
-        - em
-        - i
-        - li
-        - ol
-        - p
-        - strong
-        - u
-        - ul
-      use_summary: 0
-      token_replace: 0
-      link_to_entity: 0
-      autop: 0
-    third_party_settings:
-      ds:
-        ft:
-          id: expert
-          settings:
-            lb: ''
-            lbw: true
-            lbw-el: strong
-            lbw-cl: ''
-            lbw-at: ''
-            lb-col: false
-            ow: true
-            ow-el: ''
-            ow-cl: ''
-            ow-at: ''
-            ow-def-at: true
-            ow-def-cl: true
-            fis: false
-            fis-el: ''
-            fis-cl: ''
-            fis-at: ''
-            fis-def-at: false
-            fi: false
-            fi-el: ''
-            fi-cl: ''
-            fi-at: ''
-            fi-def-at: false
-            prefix: ''
-            suffix: ''
-    weight: 47
-    region: main
-  field_subsequent_functions:
     type: advanced_text
     label: above
     settings:
@@ -2614,7 +2593,7 @@ content:
     region: main
   field_tk_label:
     type: entity_reference_entity_view
-    label: visually_hidden
+    label: above
     settings:
       view_mode: default
       link: false
@@ -2625,22 +2604,22 @@ content:
           id: expert
           settings:
             lb: ''
-            lbw: false
-            lbw-el: ''
+            lbw: true
+            lbw-el: strong
             lbw-cl: ''
             lbw-at: ''
             lb-col: false
             ow: true
             ow-el: ''
-            ow-cl: d-flex
+            ow-cl: ''
             ow-at: ''
-            ow-def-at: false
-            ow-def-cl: false
-            fis: false
+            ow-def-at: true
+            ow-def-cl: true
+            fis: true
             fis-el: ''
-            fis-cl: ''
+            fis-cl: d-flex
             fis-at: ''
-            fis-def-at: false
+            fis-def-at: true
             fi: false
             fi-el: ''
             fi-cl: ''
@@ -2658,6 +2637,7 @@ content:
 hidden:
   body: true
   field_filter_date_made: true
+  field_geofield: true
   field_geolocation: true
   field_gks_id: true
   field_imagemy_media: true
