--- a/config/default/field.field.node.heritage_item.field_folders.yml
+++ b/config/default/field.field.node.heritage_item.field_folders.yml
@@ -11,7 +11,7 @@ field_name: field_folders
 entity_type: node
 bundle: heritage_item
 label: 'Folders (Special Projects)'
-description: ''
+description: 'Let "Folders (Special Projects)" field empty when not sure if it belongs to any Grasac special project'
 required: false
 translatable: true
 default_value: {  }
