--- a/config/default/field.storage.node.field_related_extern_lang_items.yml
+++ b/config/default/field.storage.node.field_related_extern_lang_items.yml
@@ -1,22 +1,22 @@
-uuid: 1260555a-1f68-4e63-8a00-39568f83d196
+uuid: 4b94029f-5718-4d8b-9c51-2ae3e899a9f4
 langcode: en
 status: true
 dependencies:
   module:
     - field_permissions
+    - link
     - node
 third_party_settings:
   field_permissions:
     permission_type: public
-id: node.field_subsequent_functions
-field_name: field_subsequent_functions
+id: node.field_related_extern_lang_items
+field_name: field_related_extern_lang_items
 entity_type: node
-type: string_long
-settings:
-  case_sensitive: false
-module: core
+type: link
+settings: {  }
+module: link
 locked: false
-cardinality: 1
+cardinality: -1
 translatable: true
 indexes: {  }
 persist_with_no_fields: false
