--- a/config/default/views.view.browse_gks.yml
+++ b/config/default/views.view.browse_gks.yml
@@ -504,7 +504,7 @@ display:
             group_items: {  }
           reduce_duplicates: false
           vid: collection
-          type: textfield
+          type: select
           hierarchy: false
           limit: true
           error_message: true
