--- a/config/default/core.extension.yml
+++ b/config/default/core.extension.yml
@@ -141,6 +141,7 @@ module:
   link_attributes: 0
   linkit: 0
   locale: 0
+  login_destination: 0
   mailsystem: 0
   masquerade: 0
   maxlength: 0
