--- a/config/default/user.role.authenticated.yml
+++ b/config/default/user.role.authenticated.yml
@@ -5,6 +5,7 @@ dependencies:
   module:
     - media
     - system
+    - taxonomy_access_fix
 _core:
   default_config_hash: D8GiER5rX7kzimb-u9Q0Pc3LKEFzKvKgjp2OpYPDafs
 id: authenticated
@@ -43,3 +44,17 @@ permissions:
   - 'view media'
   - 'view own field_make_role'
   - 'view own files'
+  - 'view terms in collection'
+  - 'view terms in contributor_roles'
+  - 'view terms in contributors'
+  - 'view terms in exchange_types'
+  - 'view terms in folders'
+  - 'view terms in institution'
+  - 'view terms in item_type'
+  - 'view terms in language_item_source'
+  - 'view terms in languages'
+  - 'view terms in local_origin'
+  - 'view terms in nations'
+  - 'view terms in regions'
+  - 'view terms in tags'
+  - 'view terms in traditional_knowledge_tk_labels'
