--- a/config/default/user.role.content_admin.yml
+++ b/config/default/user.role.content_admin.yml
@@ -18,7 +18,6 @@ dependencies:
     - node.type.landing_page_lb
     - node.type.language_item
     - node.type.page
-    - node.type.project
     - node.type.varbase_heroslider_media
     - taxonomy.vocabulary.collection
     - taxonomy.vocabulary.contributor_roles
@@ -133,6 +132,7 @@ permissions:
   - 'change layouts in place editing'
   - 'clone paragraph entity'
   - 'configure all landing_page_lb node layout overrides'
+  - 'configure editable landing_page_lb node layout overrides'
   - 'create and edit custom blocks'
   - 'create article content'
   - 'create audio media'
@@ -149,7 +149,6 @@ permissions:
   - 'create language_item content'
   - 'create media'
   - 'create page content'
-  - 'create project content'
   - 'create remote_video media'
   - 'create terms in collection'
   - 'create terms in contributor_roles'
@@ -180,6 +179,7 @@ permissions:
   - 'delete any article content'
   - 'delete any audio media'
   - 'delete any basic block content'
+  - 'delete any document media'
   - 'delete any faq content'
   - 'delete any file media'
   - 'delete any gallery media'
@@ -190,7 +190,6 @@ permissions:
   - 'delete any language_item content'
   - 'delete any media'
   - 'delete any page content'
-  - 'delete any project content'
   - 'delete any remote_video media'
   - 'delete any tweet media'
   - 'delete any varbase_blog content'
@@ -217,7 +216,6 @@ permissions:
   - 'delete own landing_page_lb content'
   - 'delete own language_item content'
   - 'delete own page content'
-  - 'delete own project content'
   - 'delete own remote_video media'
   - 'delete own tweet media'
   - 'delete own varbase_blog content'
@@ -259,7 +257,6 @@ permissions:
   - 'edit any landing_page_lb content'
   - 'edit any language_item content'
   - 'edit any page content'
-  - 'edit any project content'
   - 'edit any remote_video media'
   - 'edit any tweet media'
   - 'edit any varbase_blog content'
@@ -276,7 +273,6 @@ permissions:
   - 'edit own landing_page_lb content'
   - 'edit own language_item content'
   - 'edit own page content'
-  - 'edit own project content'
   - 'edit own remote_video media'
   - 'edit own tweet media'
   - 'edit own varbase_blog content'
@@ -319,7 +315,6 @@ permissions:
   - 'revert landing_page_lb revisions'
   - 'revert language_item revisions'
   - 'revert page revisions'
-  - 'revert project revisions'
   - 'revert varbase_blog revisions'
   - 'revert varbase_heroslider_media revisions'
   - 'schedule publishing of media'
@@ -376,7 +371,6 @@ permissions:
   - 'view page revisions'
   - 'view pane admin links'
   - 'view post access counter'
-  - 'view project revisions'
   - 'view scheduled content'
   - 'view scheduled media'
   - 'view scheduled taxonomy_term'
